@startuml

title __METHOD's Class Diagram__\n

  namespace method {
    class method.Delete {
        ~ con : Connection
        ~ dsql : Statement
        + delete()
    }
  }
  

  namespace method {
    class method.HelpAdd {
        ~ con : Connection
        ~ hsql : Statement
        + add()
    }
  }
  

  namespace method {
    class method.Insert {
        ~ con : Connection
        ~ irs : ResultSet
        ~ isql : Statement
        + getinsert()
    }
  }
  

  namespace method {
    class method.Login {
        ~ con : Connection
        ~ lrs : ResultSet
        ~ lsql : Statement
        + getlog()
    }
  }
  

  namespace method {
    class method.Search {
        ~ con : Connection
        ~ srs : ResultSet
        ~ ssql : Statement
        + search()
    }
  }
  

  namespace method {
    class method.Show {
        ~ con : Connection
        ~ srs : ResultSet
        ~ ssql : Statement
        + show()
    }
  }
  

  method.Delete .up.|> iterfaces.DeleteItf
  method.Delete o-- util.JDBC_link : getcon
  method.HelpAdd .up.|> iterfaces.AddItf
  method.HelpAdd o-- util.JDBC_link : getcon
  method.Insert o-- util.JDBC_link : getcon
  method.Login o-- util.JDBC_link : getcon
  method.Search .up.|> iterfaces.SearchItf
  method.Search o-- util.JDBC_link : getcon
  method.Show o-- util.JDBC_link : getcon


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
